--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
         <meta charset="utf-8">
         <title>Create</title>
     </head>
     <body>
-        
+    	<form action="{% url 'restaurant-create' %}" method = "POST">
+	    	{% csrf_token %}
+	 		{{ form.as_p }}
+	 		<input type="submit" value= "hamza here" >
+ 		</form>
+
     </body>
 </html>
